<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Authentication Page -->
    <string name="app_name">Gin Arai Dee</string>
    <string name="app_name_capital_multiline">GIN\nARAI\nDEE</string>
    <string name="app_name_capital">GIN ARAI DEE</string>
    <string name="login_text">Log in</string>
    <string name="guest_button_text">Guest Log in</string>
    <string name="featureSets">Food Recommendation\nRecipe Sharing\nDietary Planner\nBill Splitter</string>
    <string name="login_bg_description">Log in background photo</string>

    <!-- Dock Text -->
    <string name="home_page">Home Page</string>
    <string name="food">Food</string>
    <string name="browse_recipes">Browse Recipes</string>
    <string name="dietary_planner">Dietary Planner</string>
    <string name="bill_splitter">Bill Splitter</string>

    <!-- Food Recommendation Page -->
    <string name="search">Search</string>
    <string name="choose_category">Choose Category</string>
    <string name="main_dish">Main Dish</string>
    <string name="appetizers">Appetizers</string>
    <string name="snacks">Snacks</string>
    <string name="desserts">Desserts</string>
    <string name="beverages">Beverages</string>
    <string name="choose_nationality">Choose Nationality</string>

    <!-- Dietary Planner Page -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="edit">Edit</string>
    <string name="total_calories">Total Calories</string>
    <string name="thai">Thai</string>
    <string name="japanese">Japanese</string>
    <string name="italian">Italian</string>
    <string name="chinese">Chinese</string>
    <string name="korean">Korean</string>

    <!-- Bill Splitter Page -->
    <string name="num_people_text"># of People</string>
    <string name="total_text">Total</string>
    <string name="num_people">0</string>
    <string name="total">0</string>
    <string name="add">Add</string>
    <string name="list_name_text">List Name</string>
    <string name="price_text">Price</string>
    <string name="per_person_text">Per Person</string>
    <string name="add_list">⏎</string>
    <string name="clear_list">Clear All List ⌫</string>
    <string name="create_bill">Create Bill ⏎</string>
    <string name="list_text">List</string>
    <string name="select_all_text">Select All</string>
    <string name="payer_name_text">Name</string>
    <string name="payment_text">Amount to Pay</string>
    <string name="clear_name">Clear All Name ⌫</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="minus">−</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="equal">=</string>
    <string name="clear">AC</string>
    <string name="delete">⌫</string>
    <string name="done">Done⏎</string>

    <!-- Food Hub Page -->
    <string name="food_hub">Food Hub</string>
    <string name="recipes">Recipes</string>
    <string name="check">Check!</string>
    <string name="food_highlights">Food Highlights</string>
    <string name="today_s_meal">Today\'s Meal</string>

    <!-- Random Food Page -->
    <string name="title">Title</string>
    <string name="calories">Calories</string>
    <string name="description">Description</string>
    <string name="randomize">Randomize</string>
    <string name="userPage">User</string>
    <string name="favorites">Favorites</string>
    <string name="all_of_your_favorites">All of your favorites!</string>

    <string name="start">Start</string>
    <string name="random">Random</string>

    <!-- Dietary -->
    <string name="dietary">Dietary</string>
    <string name="selected_day">SelectedDay</string>
    <string name="add_items">Add item(s)</string>

</resources>