<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/champagne_pink"
    tools:context=".BillSplitterPage"
    android:id="@+id/food_dialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:fontFamily="@font/rubik_bold"
            android:text="@string/list_text"
            android:textAlignment="center"
            android:textColor="@color/charcoal"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/foodName"
            android:layout_width="match_parent"
            android:layout_height="35sp"
            android:layout_marginTop="10sp"
            android:fontFamily="@font/rubik"
            android:text="Food Namey"
            android:textAlignment="center"
            android:textColor="@color/charcoal"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/foodPrice"
            android:layout_width="350sp"
            android:layout_height="50sp"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:background="@drawable/add_bar"
            android:fontFamily="@font/rubik_bold"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/charcoal"
            android:textSize="30sp"></EditText>

        <ScrollView
            android:layout_width="350sp"
            android:layout_height="150sp"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:background="@drawable/bill_name_box">
        </ScrollView>

        <ToggleButton
            android:layout_width="350sp"
            android:layout_height="50sp"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:background="@drawable/select_all_toggle"
            android:fontFamily="@font/rubik_bold"
            android:textAllCaps="false"
            android:textColor="@color/charcoal"
            android:textOff="@string/select_all_text"
            android:textOn="@string/select_all_text"
            android:textSize="20sp">
        </ToggleButton>

        <TableLayout
            android:layout_width="355sp"
            android:layout_height="250sp"
            android:layout_gravity="center"
            android:layout_marginTop="10sp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/seven_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/number_button"
                    android:fontFamily="@font/rubik_bold"
                    android:text="@string/seven"
                    android:textColor="@color/charcoal"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/eight_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/number_button"
                    android:fontFamily="@font/rubik_bold"
                    android:text="@string/eight"
                    android:textColor="@color/charcoal"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/nine_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/number_button"
                    android:fontFamily="@font/rubik_bold"
                    android:text="@string/nine"
                    android:textColor="@color/charcoal"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/divide_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/operator_button"
                    android:fontFamily="@font/rubik_bold"
                    android:text="@string/divide"
                    android:textColor="@color/wine"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/four_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/number_button"
                    android:fontFamily="@font/rubik_bold"
                    android:text="@string/four"
                    android:textColor="@color/charcoal"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/five_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/number_button"
                    android:fontFamily="@font/rubik_bold"
                    android:text="@string/five"
                    android:textColor="@color/charcoal"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/six_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/number_button"
                    android:fontFamily="@font/rubik_bold"
                    android:text="@string/six"
                    android:textColor="@color/charcoal"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/multiply_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/operator_button"
                    android:fontFamily="@font/rubik_bold"
                    android:text="@string/multiply"
                    android:textColor="@color/wine"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/one_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/number_button"
                    android:fontFamily="@font/rubik_bold"
                    android:text="@string/one"
                    android:textColor="@color/charcoal"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/two_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/number_button"
                    android:fontFamily="@font/rubik_bold"
                    android:text="@string/two"
                    android:textColor="@color/charcoal"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/three_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/number_button"
                    android:fontFamily="@font/rubik_bold"
                    android:text="@string/three"
                    android:textColor="@color/charcoal"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/minus_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/operator_button"
                    android:fontFamily="@font/rubik_bold"
                    android:text="@string/minus"
                    android:textColor="@color/wine"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/clear_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/number_button"
                    android:fontFamily="@font/rubik_bold"
                    android:text="@string/clear"
                    android:textColor="@color/charcoal"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/zero_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/number_button"
                    android:fontFamily="@font/rubik_bold"
                    android:text="@string/zero"
                    android:textColor="@color/charcoal"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/delete_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/number_button"
                    android:fontFamily="@font/rubik_bold"
                    android:text="@string/delete"
                    android:textColor="@color/charcoal"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/plus_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/operator_button"
                    android:fontFamily="@font/rubik_bold"
                    android:text="@string/plus"
                    android:textColor="@color/wine"
                    android:textSize="20sp" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/done_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="3"
                    android:text="@string/done"
                    android:background="@drawable/done_button"
                    android:fontFamily="@font/rubik_bold"
                    android:textColor="@color/ghost_white"
                    android:textSize="20sp"
                    android:textAllCaps="false"/>

                <Button
                    android:id="@+id/equal_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/operator_button"
                    android:fontFamily="@font/rubik_bold"
                    android:text="@string/equal"
                    android:textColor="@color/wine"
                    android:textSize="20sp" />

            </TableRow>

        </TableLayout>


    </LinearLayout>

</RelativeLayout>
