<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    app:cardElevation="0dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="@color/charcoal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/cardImage"
            android:src="@mipmap/ic_launcher"
            android:scaleType="centerCrop"
            android:contentDescription="@string/food" />

        <TextView
            android:id="@+id/cardTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardImage"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/rubik"
            android:text="@string/title"
            android:textColor="@color/ghost_white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cardCalorie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardTitle"
            android:fontFamily="@font/rubik"
            android:paddingTop="5dp"
            android:text="@string/calories"
            android:textColor="@color/ghost_white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/cardDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardCalorie"
            android:fontFamily="@font/rubik"
            android:paddingTop="10dp"
            android:text="@string/description"
            android:textColor="@color/ghost_white"
            android:textSize="18sp" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>