<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ghost_white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:textSize="36dp"
        android:textAlignment="center"
        android:textColor="@color/wine"
        android:text="@string/dietary_planner"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        tools:ignore="ScrollViewCount">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            tools:ignore="UselessLeaf">

            <TextView
                android:id="@+id/monday"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_row="0"
                android:layout_rowSpan="1"
                android:layout_column="0"
                android:layout_columnSpan="1"
                android:fontFamily="@font/rubik_bold"
                android:paddingStart="20dp"
                android:paddingTop="8dp"
                android:text="@string/monday"
                android:textColor="@color/wine"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />

            <GridLayout
                android:id="@+id/monday_grid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/monday_img"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_gravity="center"
                    android:background="" />

                <Button
                    android:id="@+id/monday_edit_button"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:layout_gravity="center"
                    android:background="@drawable/dietary_shape"
                    android:fontFamily="@font/rubik"
                    android:text="@string/edit"
                    android:textColor="@color/wine" />

                <TextView
                    android:id="@+id/monday_kcal"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_row="1"
                    android:layout_column="3"
                    android:layout_gravity="center"
                    android:fontFamily="@font/rubik"
                    android:text="0"
                    android:textAlignment="center"
                    android:textColor="@color/wine" />

            </GridLayout>

            <TextView
                android:id="@+id/tuesday"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_row="2"
                android:layout_rowSpan="1"
                android:layout_column="0"
                android:layout_columnSpan="1"
                android:fontFamily="@font/rubik_bold"
                android:paddingStart="20dp"
                android:paddingTop="8dp"
                android:text="@string/tuesday"
                android:textColor="@color/wine"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/wednesday"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_row="3"
                android:layout_rowSpan="1"
                android:layout_column="0"
                android:layout_columnSpan="1"
                android:fontFamily="@font/rubik_bold"
                android:paddingStart="20dp"
                android:paddingTop="8dp"
                android:text="@string/wednesday"
                android:textColor="@color/wine"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/thursday"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_row="4"
                android:layout_rowSpan="1"
                android:layout_column="0"
                android:layout_columnSpan="1"
                android:fontFamily="@font/rubik_bold"
                android:paddingStart="20dp"
                android:paddingTop="8dp"
                android:text="@string/thursday"
                android:textColor="@color/wine"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/friday"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_row="5"
                android:layout_rowSpan="1"
                android:layout_column="0"
                android:layout_columnSpan="1"
                android:fontFamily="@font/rubik_bold"
                android:paddingStart="20dp"
                android:paddingTop="8dp"
                android:text="@string/friday"
                android:textColor="@color/wine"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/saturday"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_row="6"
                android:layout_rowSpan="1"
                android:layout_column="0"
                android:layout_columnSpan="1"
                android:fontFamily="@font/rubik_bold"
                android:paddingStart="20dp"
                android:paddingTop="8dp"
                android:text="@string/saturday"
                android:textColor="@color/wine"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/sunday"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_row="7"
                android:layout_rowSpan="1"
                android:layout_column="0"
                android:layout_columnSpan="1"
                android:fontFamily="@font/rubik_bold"
                android:paddingStart="20dp"
                android:paddingTop="8dp"
                android:text="@string/sunday"
                android:textColor="@color/wine"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />

        </GridLayout>

    </ScrollView>

</RelativeLayout>