<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/middle_red_purple">

    <TextView
        android:id="@+id/appNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/app_name_capital"
        android:textColor="@color/champagne_pink"

        android:textSize="52sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <TextView
        android:id="@+id/featureList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/featureSets"
        android:textAlignment="textEnd"
        android:textColor="@color/champagne_pink"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.866"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.308" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:background="@drawable/round_button_cadet_blue"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/login_text"
        android:textColor="@color/eerie_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.69"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/guestButton"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button_champagne_pink"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/guest_button_text"
        android:textColor="@color/eerie_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.228"
        app:layout_constraintStart_toEndOf="@+id/loginButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.69" />

</androidx.constraintlayout.widget.ConstraintLayout>